Azure/Azure-Pipelines/pipelines/k8s/productenrichmentomnilogicapi/manifests/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: productenrichmentmacnaimaapi
  namespace: catalog-integration-qa
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: enrichment.catalog-integration.qa.10-186-28-100.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: productenrichmentmacnaimaapi
            port:
              number: 80
